all spacing fixed for patient 1, and copy and modal updates for patient 2 and 3

--- a/src/javascript/templates/patient1/patient1View16.hbs
+++ b/src/javascript/templates/patient1/patient1View16.hbs
@@ -69,8 +69,8 @@
          <figure>
            <img src="images/double_helix.jpg" alt="" />
          </figure>
-          
-          <figure>
+
+          <figure class="p-top2">
             <img src="images/doctor_in_lab.jpg" alt="" />
           </figure>
 
