--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -64,7 +64,7 @@ In this example. the ratio of red dots to green dots is 6:2, or 3.  This means t
             <div class="svg-container">
                 <img src="images/Microscope_GreenRedDots_6_2.jpg" alt="cell biopsy slide 3" />
 
-                <p>
+                <p class="black">
                   Now you’re ready to observe the fluorescence micrograph!
                 </p>
             </div>
