--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -54,11 +54,10 @@
   Observe the fluorescence micrograph for HER2 FISH testing.        </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
-        <h2>Conducting the HER2 FISH Test:</h2>
-        <p>
-      Velma’s HER2 FISH Test results are in!
-</p>
-<p>
+         <h2 class="con-fix">Conducting the HER2 FISH Test:</h2>
+<p class="pad-50">
+      Velma’s HER2 FISH Test results are in!<br><br>
+
   Click on the microscope to analyze Velma’s HER2 FISH test and calculate the ratio of red dots to green dots.
 Should the test results be reported as amplified or not amplified?<br><br>
 <strong>Be sure to record the results in your Lab Handbook.
@@ -69,7 +68,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
             <div class="svg-container">
                 <img src="images/Microscope_GreenRedDots_6_6.jpg" alt="cell biopsy slide 3" />
 
-                <p>
+                <p class="black">
                   Now you’re ready to observe the fluorescence micrograph!
                 </p>
             </div>
