--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -45,7 +45,7 @@
       Look at the abnormality in Velma’s mammogram.  Which of the objects is closest to the size of the  abnormality?
 
       </p>
-      <div class="svg-container">
+      <div class="svg-container pick-fix">
         <div class="svg-text2">Click the object that is closest in size to the abnormality.</div>
         <figure>
           <img src="images/p1screen3.png" alt="" />
