--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -65,7 +65,7 @@
               <main id="content-main" class="row patient-1">
 
                 <figure>
-                  <img src="images/microscope8.jpg" alt="" />
+                  <img class="no-pad" src="images/microscope8.jpg" alt="" />
                 </figure>
                 <p class="p-top">Does Velma's breast tissue sample indicate the presence of cancer? Hover over the tissue samples to magnify.
                             </p>
@@ -74,6 +74,7 @@
 
 
                      </figure>
+                     <br>
                      <div class="row m-bottom">
 
 
@@ -127,7 +128,7 @@
                           </div>
                           <div class="col-md-4">
                               <a href="/patient1view10" data-navigate="patient1view10" class="continue next">
-                                  <button type="button" name="button">Next &#8594;</button>
+                                  <button type="button" class="muted" name="button">Next &#8594;</button>
                               </a>
                           </div>
                       </div>
