--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -37,7 +37,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-  Here is Michele’s mammogram.    </blockquote>
+  Here is Michele’s mammogram. </blockquote>
     <main id="content-main" class="row patient-2 top-gray">
 
       <div class="header-gray">
@@ -52,7 +52,7 @@
       </div>
       <p>Be sure to record this information in your Lab Handbook.</p>
          <figure class="m-bottom">
-           <img src="images/breast_scan_6.jpg" alt="" />
+           <img class="no-pad" src="images/breast_scan_6.jpg" alt="" />
          </figure>
 
 
@@ -103,7 +103,7 @@
                  <!-- Button trigger modal -->
                  <a class="continue next gray"><button type="button muted"  data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
                  <!-- Modal -->
-                 <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                 <div class="modal fade" id="modalCorrect2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
