--- a/src/javascript/templates/screen1IntroView.hbs
+++ b/src/javascript/templates/screen1IntroView.hbs
@@ -10,7 +10,7 @@
 
 
    <h2>Lab Tip</h2>
-   <p>Be sure to download the Lab Handbook before you begin this lab. The Lab Handbook contains important reference information and graphic organizers for you to record your patient notes. Throughout this Virtual Lab, you will be prompted to use your Lab Handbook to record or collect information.
+   <p class="p-bot">Be sure to download the Lab Handbook before you begin this lab. The Lab Handbook contains important reference information and graphic organizers for you to record your patient notes. Throughout this Virtual Lab, you will be prompted to use your Lab Handbook to record or collect information.
 </p>
 <figure class="margin-bottom-equal">
   <img class="one-hun" src="images/patient_and_doctor4.jpg" alt="" />
