--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -3,88 +3,227 @@
 <div class="row">
     <div class="col-md-3 no-pad">
         <div id="side-navs-fixed">
-          <nav class="side-nav">
-            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
-            <ul class="complete-side">
-              <li><span class="number-gray">No. 01</span></li>
-              <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
-            </ul>
+            <nav class="side-nav">
+                <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                <ul class="complete-side">
+                    <li>
+                        <span class="number-gray">No. 01</span>
+                    </li>
+                    <li class="pink-text">Mammograms</li>
+                    <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                </ul>
 
-              <ul class="complete-side">
-                <li><span class="number-gray">No. 02</span></li>
-                <li class="pink-text">Biopsy</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
-              </ul>
+                <ul class="complete-side">
+                    <li>
+                        <span class="number-gray">No. 02</span>
+                    </li>
+                    <li class="pink-text">Biopsy</li>
+                    <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                </ul>
 
 
-            <div class="background-pink">
-              <ul>
-                <li><span class="white">No. 03</span></li>
-                <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
-              </ul>
-            </div>
-            <div class="row next-steps">
-
-                <div class="row breadcrumb steps-13">
-                <ul class="ul-fix">
-                    <li class="1st-step completed"><span class="dot completed"></li>
-                    <li class="2nd-step completed"><span class="dot completed"></span></li>
-                    <li class="3rd-step completed"><span class="dot completed"></span></li>
-                    <li class="4th-step completed"><span class="dot completed"></span></li>
-                    <li class="5th-step completed"><span class="dot completed"></span></li>
-                    <li class="6th-step completed"><span class="dot completed"></span></li>
-                    <li class="7th-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
-                    <li class="8th-step "><span class="dot "></span></li>
-                    <li class="9th-step "><span class="dot "></span></li>
-                    <li class="10th-step"><span class="dot"></span></li>
-                    <li class="11th-step"><span class="dot"></span></li>
-                    <li class="12th-step"><span class="dot"></span></li>
-                  </ul>
+                <div class="background-pink">
+                    <ul>
+                        <li>
+                            <span class="white">No. 03</span>
+                        </li>
+                        <li class="border-bottom">Molecular Testing</li>
+                        <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                    </ul>
                 </div>
-              <ul>
-                <li><span>No. 04</span></li>
-                <li>Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
-              </ul>
-            </div>
-          </nav>
+                <div class="row next-steps">
+
+                    <div class="row breadcrumb steps-13">
+                        <ul class="ul-fix">
+                            <li class="1st-step completed">
+                                <span class="dot completed">
+                            </li>
+                            <li class="2nd-step completed">
+                                <span class="dot completed"></span>
+                            </li>
+                            <li class="3rd-step completed">
+                                <span class="dot completed"></span>
+                            </li>
+                            <li class="4th-step completed">
+                                <span class="dot completed"></span>
+                            </li>
+                            <li class="5th-step completed">
+                                <span class="dot completed"></span>
+                            </li>
+                            <li class="6th-step completed">
+                                <span class="dot completed"></span>
+                            </li>
+                            <li class="7th-step active">
+                                <span class="dot active">
+                                    <img src="images/hotspot.png" class="hotspot" alt="hotspot" />
+                                </span>
+                                <span class="dot active pulse"></span>
+                            </li>
+                            <li class="8th-step ">
+                                <span class="dot "></span>
+                            </li>
+                            <li class="9th-step ">
+                                <span class="dot "></span>
+                            </li>
+                            <li class="10th-step">
+                                <span class="dot"></span>
+                            </li>
+                            <li class="11th-step">
+                                <span class="dot"></span>
+                            </li>
+                            <li class="12th-step">
+                                <span class="dot"></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul>
+                        <li>
+                            <span>No. 04</span>
+                        </li>
+                        <li>Recommendations</li>
+                        <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                    </ul>
+                </div>
+            </nav>
 
         </div>
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
-      <blockquote>
-Recommend a treatment plan for Velma.     </blockquote>
-        <main id="content-main" class="row patient-1">
-    <p>
-  Use the notes from your Lab Handbook to recommend a personalized treatment plan for Velma Belt.
-Select one of the following options:
- Hormone blocking therapy only
- Hormone blocking therapy and chemotherapy
- HER2-targeted therapy and chemotherapy
- Hormone blocking  therapy, HER2-targeted therapy, and chemotherapy
-You may change your recommendation before getting an update on your patient’s status.
-Once you are done with your recommendation, you can review your patient’s status.
+        <blockquote>
+            Use the notes from your Lab Handbook to recommend a personalized treatment plan for Velma Belt.</blockquote>
+        <main id="content-main" class="row patient-1 svg-test">
 
-Student makes a selection.  Feedback given.
+            <p class="background-gray3">Select one of the following options and review your patient’s progress:</p>
 
-Be sure to record the information in your Lab Handbook.
+            <h2>A: Hormone blocking therapy only</h2>
+            <div class="row reg-pad">
+                <div class="col-md-12 no-pad text-center choice background-nav-blue">
+                    <a class="continue answer-1">
+                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer1">Administer Treatment A</button>
+                    </a>
 
- </p>
-<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
+                </div>
+            </div>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="modalAnswer1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body pat2">
+                            <h2>Correct!  Based on the results of Velma’s tests, her physician should recommend hormone blocking therapy only.
+                            </h2>
+                        </div>
+                        <div class="modal-footer background-nav-blue">
+                            <a class="continue-2">
+                                <button data-dismiss="modal" name="button">Try Again</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h2>B: Chemotherapy followed by hormone blocking therapy</h2>
+            <div class="row reg-pad">
+                <div class="col-md-12 no-pad text-center choice background-nav-blue">
+                    <a class="continue answer-2">
+                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer2">Administer Treatment B</button>
+                    </a>
+
+                </div>
+            </div>
+
+            <div class="modal fade" id="modalAnswer2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body pat2">
+                            <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
+                        </div>
+                        <div class="modal-footer background-nav-blue">
+                            <a class="continue-2">
+                                <button data-dismiss="modal" name="button">Try Again</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2>C: HER2-targeted therapy and chemotherapy</h2>
+            <div class="row reg-pad">
+                <div class="col-md-12 no-pad text-center choice background-nav-blue">
+                    <a class="continue answer-3">
+                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer3">Administer Treatment C</button>
+                    </a>
+
+                </div>
+            </div>
+
+            <div class="modal fade" id="modalAnswer3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body pat2">
+                            <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
+                        </div>
+                        <div class="modal-footer background-nav-blue">
+                            <a data-navigate="startview3" class="continue-2">
+                                <button data-dismiss="modal" name="button">Continue</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2>D: Hormone blocking therapy, HER2-targeted therapy, and chemotherapy</h2>
+            <div class="row reg-pad m-bot">
+                <div class="col-md-12 no-pad text-center choice background-nav-blue">
+                    <a class="continue answer-4">
+                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer4">Administer Treatment D</button>
+                    </a>
+
+                </div>
+            </div>
+            <div class="modal fade" id="modalAnswer4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body pat2">
+                            <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
+                        </div>
+                        <div class="modal-footer background-nav-blue">
+                            <a class="continue-2">
+                                <button data-dismiss="modal" name="button">Try Again</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="multi-pad">
+              before getting an update on your patient’s status. Once you are done with your recommendation,
+               you can review your patient’s status.<br><br>
+
+                <strong>Be sure to record the information in your Lab Handbook.<strong>
+            </p>
+
+
+
+
 
 
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
-                  <div class="col-md-4">
-                    <a data-navigate="patient1view36" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
-                  </div>
-                  <div class="col-md-4 line-across">
+                    <div class="col-md-4">
+                        <a data-navigate="patient1view36" class="previous">
+                            <button class="" type="button" name="button">&#8592; Previous</button>
+                        </a>
+                    </div>
+                    <div class="col-md-4 line-across">
 
-                  </div>
-                  <div class="col-md-4">
-                    <a data-navigate="patient1view37_5" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a data-navigate="patient1view37_5" class="continue next">
+                            <button  class="muted" type="button" name="button">Next &#8594;</button>
+                        </a>
 
-                    <!-- Modal -->
+                        <!-- Modal -->
 
-                  </div>
+                    </div>
                 </div>
             </div>
 
