--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-           
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -41,14 +41,14 @@
     </blockquote>
     <main id="content-main" class="row patient-2">
 
-      <p>Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
+      <p class="p-top">Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
 </p>
          <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
 
 
 
-         </figure>
+         </figure><br>
          <p class="no-top-pad"><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
 </p>
 
