--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -124,7 +124,7 @@ main {
     min-width: 662px;
     // max-width: 606px;
     p {
-      padding: 0em 0em 1em 0;
+      padding: 0em 0em 25px 0;
       text-transform: initial;
       margin:0;
       &:last-of-type {
@@ -276,7 +276,7 @@ height: 18px;
 
   }
 }
-.patients-container div:nth-child(5) {
+.patients-container div:nth-child(6) {
   margin-bottom: 6em;
 }
 
@@ -1516,9 +1516,7 @@ button {
 .text-blue {
   color: #337ab7!important;
 }
-.p-top {
-  padding-top:50px!important;
-}
+
 .gray {
   &:after {
     content: '';
@@ -1533,4 +1531,34 @@ top: 15px;
 
 .svg-test .pad50 {
   padding: 50px !important;
+}
+
+.p-top {
+  padding-top:50px!important;
+}
+.p-top2 {
+  padding-top:25px!important;
+}
+.p-bot {
+  padding-bottom:50px!important;
+}
+.p-bot2 {
+  padding-bottom:50px!important;
+}
+.multi-pad {
+  padding: 0 50px 50px 50px!important;
+}
+.pick-fix {
+  top:-21px;
+}
+.no-pad {
+  padding:0!important;
+}
+
+.con-fix {
+  padding: 50px 50px 0 50px!important;
+}
+
+.black {
+  color:#061922!important;
 }
