fixed padding on all pages that needed it. which was a lot

--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -39,17 +39,17 @@
     <blockquote>
   In this segment of the Decoding Cancer Virtual Lab, you will evaluate Michele’s breast cancer and conduct tests to recommend a treatment plan.
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
 
       <p class="p-top">Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
 </p>
-         <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
+         <figure class="m-bottom multi-pad">
+           <img class="no-pad" src="images/patient2slide1.png" alt="" />
 
 
 
-         </figure><br>
-         <p class="no-top-pad"><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
+         </figure>
+         <p class="multi-pad"><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
 </p>
 
          <div class="row continue-container background-nav-blue">
