--- a/src/javascript/templates/patient2/patient2view7.hbs
+++ b/src/javascript/templates/patient2/patient2view7.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
-   
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -39,11 +39,10 @@
     <blockquote>
     Dr. You: Make a Decision
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
 
-      <p>Do you have enough information to make a recommendation for treatment or do you need additional information?
-</p>
-<p>
+      <p class="pad50">Do you have enough information to make a recommendation for treatment or do you need additional information?
+<br><br>
 Click below to make your selection for next steps.
 </p>
          <!-- <figure class="m-bottom">
