--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -18,7 +18,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -55,13 +55,13 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
       <p>Are Michele’s ER test results positive or negative? Be sure to record this information in the Lab Handbook. Hover over the tissue samples to magnify.
 
 </p>
-<ul class="specs">
+<ul class="specs multi-pad">
   <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
   <li><strong>Laterality:</strong> left</li>
   <li><strong>Tumor size:</strong>1 cm</li>
 
 </ul>
-<figure>
+<figure class="multi-pad">
   <img class="magnify one-hun" class="zoom" data-magnify-src="images/ERNeg_Invasive_IHC_Michele.jpg" src="images/ERNeg_Invasive_IHC_Michele.jpg" alt="cell biopsy slide 3" />
 </figure>
 
