--- a/src/javascript/templates/patient3/patient3view1.hbs
+++ b/src/javascript/templates/patient3/patient3view1.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -44,11 +44,8 @@ In this segment of the Decoding Cancer Virtual Lab, you will evaluate Brittanyâ€
       <p>Brittany Featherston is a 39-year old female. During her monthly self-breast exam, Brittany felt a lump in her left breast and immediately consulted her physician.  Her physician ordered a mammogram.
 
 </p>
-         <figure class="m-bottom">
-           <img src="images/patient_and_doctor2.jpg" alt="" />
-
-
-
+         <figure class="m-bottom p-bot">
+           <img class="no-pad" src="images/patient_and_doctor2.jpg" alt="" />
          </figure>
          <p><strong>As you progress through the Virtual Lab,  be sure to record Brittanyâ€™s test results and your notes in your Lab Handbook.  </strong>
 </p>
