--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -18,7 +18,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-       
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -40,23 +40,20 @@
     <blockquote>
       Brittany’s tissue sample has been sent for HER2 FISH testing.
   </blockquote>
-    <main id="content-main" class="row patient-3 top-gray">
+    <main id="content-main" class="row patient-3 top-gray svg-test">
 
 
       <p>Click on the microscope to analyze Brittany’s tissue sample. Calculate the ratio of red dots to green dots.
 
-</p>
-<p>
+<br><br>
   Are the results amplified or not amplified?
-
-</p>
-<p>
+<br><br>
   <strong>Be sure to record the results in your Lab Handbook.</strong>
 
 </p>
 
 <figure>
-  <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
+  <img class="multi-pad" class="zoom"  src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
 </figure>
 
 
