--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -29,7 +29,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-           
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -53,7 +53,7 @@
     </blockquote>
     <main id="content-main" class="row patient-3 svg-test">
 
-      <p>
+      <p class="pad50">
 Review Brittany's mammogram and click on the area that shows an abnormality. <br><br>
 Be sure to record the information in your Lab Handbook.
 
