--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-           
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -54,7 +54,7 @@
       <p><strong>Be sure to record this information in your Lab Handbook.</strong>
 </p>
          <figure class="m-bottom">
-           <img src="images/breast_scan5.jpg" alt="" />
+           <img class="no-pad" src="images/breast_scan5.jpg" alt="" />
          </figure>
 
 
