--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -39,7 +39,7 @@
     <blockquote>
 The pathologist examined Brittany’s tissue and has provided a pathology report.
     </blockquote>
-    <main id="content-main" class="row patient-3">
+    <main id="content-main" class="row patient-3 svg-test">
 
       <div class="header-gray">
         <div class="col-md-3">
@@ -51,8 +51,8 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
 
         </div>
       </div>
-      <p>
-        <ul class="specs">
+
+        <ul class="specs fig-fix">
           <li><strong>Final Diagnosis:</strong><br>   Infiltrating ductal carcinoma</li>
           <li><strong>Histological Grade:</strong><br> 3</li>
           <li><strong>Stage:</strong><br>2</li>
@@ -60,11 +60,11 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
           <li><strong>Number of positive nodes:</strong><br>0</li>
 
         </ul>
-      </p>
-      <figure>
+
+      <figure class="fig-fix">
         <img src="images/Discovery_ValSkinner_PathologyReports_2.jpg" alt="" />
       </figure>
-        <p>Be sure to record this information in your Lab Handbook.</p>
+        <p class="multi-pad">Be sure to record this information in your Lab Handbook.</p>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
