--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -18,7 +18,7 @@
             <li><span></span></li>
             <li class="border-bottom purple-text"><img src="images/icon_ertest_off.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -40,17 +40,15 @@
     <blockquote>
       Michele’s tissue sample has been sent for HER2 FISH testing.
   </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+    <main id="content-main" class="row patient-2 top-gray svg-test">
 
 
-      <p>Click on the microscope to analyze Michele’s tissue sample.  Calculate the ratio of red dots to green dots.
+      <p class="pad50">Click on the microscope to analyze Michele’s tissue sample.  Calculate the ratio of red dots to green dots.
 
-</p>
-<p>
+<br><br>
   Are the results amplified or not amplified?
 
-</p>
-<p>
+<br><br>
   <strong>Be sure to record the results in your Lab Handbook.</strong>
 
 </p>
