--- a/src/javascript/templates/patient2/patient2view11.hbs
+++ b/src/javascript/templates/patient2/patient2view11.hbs
@@ -39,15 +39,13 @@
     <blockquote>
     Dr. You: Make a Decision
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
 
       <p>What are the implications of Michele’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.
 
-</p>
-<p>
+<br><br>
 Do you have enough information to make a recommendation for treatment or do you need additional information?
-</p>
-<p>
+<br><br>
   Click below to make your selection for next steps.
 </p>
          <!-- <figure class="m-bottom">
@@ -73,11 +71,11 @@ Do you have enough information to make a recommendation for treatment or do you 
                      <div class="modal-content">
                        <div class="modal-body">
 
-                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
+                       <h2>That is correct.  Based on Michele’s test results, you now have enough information to make a treatment recommendation.  Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</h2>
 
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a class="continue-2" data-navigate="patient2view10" href="patient2view10"><button  name="button">Continue</button></a>
+                          <a class="continue-2" data-navigate="patient2view12" ><button  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
@@ -89,14 +87,15 @@ Do you have enough information to make a recommendation for treatment or do you 
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view8" href="patient2view8" class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
+                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
 
 <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-      <h2>Next Test: That is incorrect. Based on Michele’s test results, you now have enough information to make a treatment recommendation.
-      Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</h2>
+      <h2> That is incorrect. Based on Michele’s test results, you now have enough information to make a treatment recommendation.
+Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.
+</h2>
       </div>
       <div class="modal-footer background-nav-blue">
          <a class="continue-2" data-navigate="patient2view12" href="patient2view12"><button  name="button">Continue</button></a>
