--- a/src/javascript/templates/patient2/patient2view4.hbs
+++ b/src/javascript/templates/patient2/patient2view4.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
-           
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -39,11 +39,10 @@
     <blockquote>
     Dr. You: Make a Decision
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
 
       <p>Do you have enough information to make a recommendation for treatment or do you need additional information?
-</p>
-<p>
+<br><br>
 Click below to make your selection for next steps.
 </p>
          <!-- <figure class="m-bottom">
@@ -67,7 +66,7 @@ Click below to make your selection for next steps.
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
+                       <h2>You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                           <a class="continue-2" data-navigate="patient2view5"><button  name="button">Continue</button></a>
