--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
-           
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -51,7 +51,6 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
 
         </div>
       </div>
-      <p>
         <ul class="specs">
           <li><strong>Final Diagnosis:</strong><br> Infiltrating ductal carcinoma</li>
           <li><strong>Histological Grade:</strong><br> 3</li>
@@ -60,11 +59,10 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
           <li><strong>Number of positive nodes:</strong><br> 0</li>
 
         </ul>
-      </p>
-        <figure>
-          <img src="images/Discovery_ValSkinner_PathologyReports_3.jpg" alt="" />
+        <figure class="multi-pad">
+          <img class="no-pad" src="images/Discovery_ValSkinner_PathologyReports_3.jpg" alt="" />
         </figure>
-        <p>
+        <p class="multi-pad">
           Be sure to record this information in your Lab Handbook.
         </p>
          <div class="row continue-container background-nav-blue">
