--- a/src/javascript/templates/patient2/patient2view9.hbs
+++ b/src/javascript/templates/patient2/patient2view9.hbs
@@ -17,7 +17,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -39,15 +39,13 @@
     <blockquote>
     Dr. You: Make a Decision
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-2 svg-test">
 
-      <p>What are the implications of Michele’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.
+      <p class="pad50">What are the implications of Michele’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.
 
-</p>
-<p>
+<br><br>
 Do you have enough information to make a recommendation for treatment or do you need additional information?
-</p>
-<p>
+<br><br>
   Click below to make your selection for next steps.
 </p>
          <!-- <figure class="m-bottom">
