--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -18,7 +18,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -40,7 +40,7 @@
     <blockquote>
 Brittany’s tissue sample has been sent for HER2 FISH testing.
  </blockquote>
-    <main id="content-main" class="row patient-3 top-gray">
+    <main id="content-main" class="row patient-3 top-gray svg-test">
 
       <div class="header-gray">
         <div class="col-md-3">
@@ -59,13 +59,13 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
 <strong>Be sure to record this information in the Lab Handbook. Hover over the tissue samples to magnify.
 </strong>
 </p>
-<ul class="specs">
+<ul class="specs multi-pad">
   <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
   <li><strong>Laterality:</strong> left</li>
   <li><strong>Tumor size:</strong>1 cm</li>
 
 </ul>
-<figure>
+<figure class="multi-pad">
   <img class="magnify one-hun" class="zoom" data-magnify-src="images/ER_Invasive2_Brittany.jpg" src="images/ER_Invasive2_Brittany.jpg" alt="cell biopsy slide 3" />
 </figure>
 
