--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -49,7 +49,7 @@
         </div>
     </div>
 </div>
-<div class="pick-patient col-md-8 col-md-offset-2">
+<div class="pick-patient col-md-8 col-md-offset-2 m-bot-6">
   <a class="start-patient" href="/patient3view1" data-navigate="patient3view1"></a>
 
   <div class="col-md-5 no-pad">
