fixing interactive flow for all patients, not ready yet.

--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -104,10 +104,10 @@
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
+                  <a class="continue next gray"><button class="muted gray" type="button" name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
-                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-body">
