--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1503,12 +1503,15 @@ text-transform:none;
 .top-5 {
     top: 31px!important;
 }
+.gray {
+  cursor: default;
+}
 button {
   text-transform: uppercase;
   font-weight: 100!important;
   &.muted {
-    color: gray!important;
-    cursor: default;
+    color: gray;
+    cursor: default!important;
     text-transform: uppercase;
     font-size: 17px;
   }
