fixed patient 1 and 2 click cancer interactive

--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -18,7 +18,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
-           
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -149,7 +149,7 @@
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next"><button type="button"  name="button">Submit &#8594;</button></a>
+                  <a class="continue next gray"><button type="button gray"  name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
 
