--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -136,7 +136,7 @@ Be sure to record the information in your Lab Handbook.
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
+                  <a class="contine next gray"><button type="button gray" class="muted"  name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
 
