--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -78,7 +78,7 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="modalIncorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" data-backdrop="" id="modalIncorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
@@ -104,22 +104,10 @@
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next gray"><button class="muted gray" type="button" name="button">Submit &#8594;</button></a>
+                  <a class="gray"><button class="muted gray"  type="button" name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
-                  <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-body">
-                          <h2><span class="pink-hl">Correct!</span> The area you clicked on indicates abnormal breast tissue.</h2>
-                        </div>
-                        <div class="modal-footer background-nav-blue">
-                          <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
 
                 </div>
