--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1506,17 +1506,26 @@ text-transform:none;
 .gray {
   cursor: default;
 }
+
 button {
   text-transform: uppercase;
   font-weight: 100!important;
   &.muted {
     color: gray;
-    cursor: default!important;
+    cursor: default;
     text-transform: uppercase;
     font-size: 17px;
   }
   &.highlight {
     color: white!important;
+  }
+}
+a {
+  .correct {
+    cursor: pointer;
+  }
+  .incorrect {
+    cursor: pointer;
   }
 }
 .intro-border {
