--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1515,6 +1515,9 @@ button {
     cursor: default;
     text-transform: uppercase;
     font-size: 17px;
+    &.whitey {
+      color:white!important;
+    }
   }
   &.highlight {
     color: white!important;
