fixed routes on patient1view37 going to 37_5 and then 38

--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -110,13 +110,13 @@
             <div class="modal fade" id="modalAnswer1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-body pat2">
+                        <div class="modal-body pat1">
                             <h2>Correct!  Based on the results of Velma’s tests, her physician should recommend hormone blocking therapy only.
                             </h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
-                            <a class="continue-2">
-                                <button data-dismiss="modal" name="button">Try Again</button>
+                            <a data-navigate="patient1view37_5" class="continue-2">
+                                <button data-dismiss="modal" name="button">Continue</button>
                             </a>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                             <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
-                            <a data-navigate="startview3" class="continue-2">
+                            <a  class="continue-2">
                                 <button data-dismiss="modal" name="button">Continue</button>
                             </a>
                         </div>
@@ -206,26 +206,7 @@
 
 
 
-            <div class="row continue-container background-nav-blue">
-                <div class="col-md-12 no-pad text-center">
-                    <div class="col-md-4">
-                        <a data-navigate="patient1view36" class="previous">
-                            <button class="" type="button" name="button">&#8592; Previous</button>
-                        </a>
-                    </div>
-                    <div class="col-md-4 line-across">
 
-                    </div>
-                    <div class="col-md-4">
-                        <a data-navigate="patient1view37_5" class="continue next">
-                            <button  class="muted" type="button" name="button">Next &#8594;</button>
-                        </a>
-
-                        <!-- Modal -->
-
-                    </div>
-                </div>
-            </div>
 
         </main>
     </div>
