added yes no functionality to another page, updated copy on patien1 pages

--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -51,27 +51,66 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Observe the fluorescence micrograph for HER2 FISH testing.        </blockquote>
+Velma’s HER2 FISH Test results are in!
+      </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
-         <h2 class="con-fix">Conducting the HER2 FISH Test:</h2>
 <p class="pad-50">
-      Velma’s HER2 FISH Test results are in!<br><br>
-
   Click on the microscope to analyze Velma’s HER2 FISH test and calculate the ratio of red dots to green dots.
 Should the test results be reported as amplified or not amplified?<br><br>
-<strong>Be sure to record the results in your Lab Handbook.
-</strong>
+
 
 </p>
+<div class="row m-bottom multi-pad">
+
+
+<div class="col-md-5 yes-no col-sm-offset-1-5">
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">Amplified <span class="check-mark">&#x2717;</span></button></a>
+  <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+        <h2>That is incorrect. The HER2 FISH ratio is 1.5, so HER2 is not amplified.</h2>
+        </div>
+        <div class="modal-footer background-nav-blue">
+          <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="margin-left: 25px;" class="col-md-5 yes-no">
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Not Amplified <span class="check-mark mark2">&#x2713;</span></button></a>
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+        <h2><span class="pink-hl">Correct</span>. The HER2 FISH ratio is 1.5, so HER2 is not amplified. This indicates that HER2-targeted therapy should not be recommended as part of Velma’s treatment.</h2>
+        </div>
+        <div class="modal-footer background-nav-blue">
+          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
 
             <div class="svg-container">
-                <img src="images/Microscope_GreenRedDots_6_6.jpg" alt="cell biopsy slide 3" />
+                <img class="pro-fix" src="images/Microscope_GreenRedDots_6_6.jpg" alt="cell biopsy slide 3" />
 
-                <p class="black">
+                <p class="black pad50">
                   Now you’re ready to observe the fluorescence micrograph!
                 </p>
             </div>
+            <p class="multi-pad">
+              <strong>Be sure to record the results in your Lab Handbook.
+              </strong>
+            </p>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
