--- a/src/javascript/templates/screen1IntroView.hbs
+++ b/src/javascript/templates/screen1IntroView.hbs
@@ -20,6 +20,6 @@
 </figure>
     <div class="row continue-container  ">
         <div class="col-md-12 no-pad text-center">
-          <a data-navigate="screen2" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
+          <a data-navigate="screen2" class="continue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
         </div>
     </div>
