--- a/src/javascript/templates/screen2IntroView.hbs
+++ b/src/javascript/templates/screen2IntroView.hbs
@@ -19,6 +19,6 @@ Precision medicine is changing the face of cancer treatment.
     <div class="row continue-container">
         <div class="col-md-12 no-pad text-center">
           <a class="previous" data-navigate="/"></a>
-          <a data-navigate="startview" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
+          <a data-navigate="startview" class="continue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
         </div>
     </div>
