--- a/src/javascript/templates/endView.hbs
+++ b/src/javascript/templates/endView.hbs
@@ -26,7 +26,7 @@ In keeping with the MoonShot initiative to cure cancer, a better understanding o
 
 <div class="row continue-container  ">
     <div class="col-md-12 no-pad text-center">
-      <a data-navigate="screen2" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Return to Decoding Cancer</button></a>
+      <a href="http://www.decodingcancer.org"  class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Return to Decoding Cancer</button></a>
     </div>
 </div>
 
