closed multiple issues with copy and 4 issues with missing yes-no interactives on pages

--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -84,7 +84,10 @@
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
                              <div class="modal-body">
-                             <h2>Incorrect. This tissue sample does not contain cancer cells. The cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei. They have no duct structures and stain more purple than pink.</h2>
+                             <h2>Incorrect. This tissue sample does not contain cancer cells. </h2><br>
+                               <p>
+                                 The cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei. They have no duct structures and stain more purple than pink.
+                               </p>
                              </div>
                              <div class="modal-footer background-nav-blue">
                                <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
@@ -101,7 +104,8 @@
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
                              <div class="modal-body">
-                             <h2><span class="pink-hl">Correct</span>. This tissue sample contains cancer cells. The cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei. They have no duct structures and stain more purple than pink.</h2>
+                             <h2><span class="pink-hl">Correct</span>. This tissue sample contains cancer cells. </h2><br>
+                               <p>The cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei. They have no duct structures and stain more purple than pink.</p>
                              </div>
                              <div class="modal-footer background-nav-blue">
                                <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
