--- a/src/javascript/templates/patient2/patient2view11.hbs
+++ b/src/javascript/templates/patient2/patient2view11.hbs
@@ -71,8 +71,12 @@ Do you have enough information to make a recommendation for treatment or do you 
                      <div class="modal-content">
                        <div class="modal-body">
 
-                       <h2>That is correct.  Based on Michele’s test results, you now have enough information to make a treatment recommendation.  Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</h2>
+                       <h2>That is correct.  Based on Michele’s test results, you now have enough information to make a treatment recommendation. </h2><br>
+                        <p style="text-transform:none">
+                          Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not
+                          chemotherapy should be a part of Michele’s treatment plan.
 
+                        </p>
                        </div>
                        <div class="modal-footer background-nav-blue">
                           <a class="continue-2" data-navigate="patient2view12" ><button  name="button">Continue</button></a>
@@ -93,9 +97,9 @@ Do you have enough information to make a recommendation for treatment or do you 
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-      <h2> That is incorrect. Based on Michele’s test results, you now have enough information to make a treatment recommendation.
-Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.
-</h2>
+      <h2> That is incorrect. Based on Michele’s test results, you now have enough information to make a treatment recommendation.</h2>
+<p style="text-transform:none">Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</p>
+
       </div>
       <div class="modal-footer background-nav-blue">
          <a class="continue-2" data-navigate="patient2view12" href="patient2view12"><button  name="button">Continue</button></a>
