--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -65,7 +65,44 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
   <img class="magnify one-hun" class="zoom" data-magnify-src="images/ERNeg_Invasive_IHC_Michele.jpg" src="images/ERNeg_Invasive_IHC_Michele.jpg" alt="cell biopsy slide 3" />
 </figure>
 
+<div class="row m-bottom multi-pad">
 
+
+<div class="col-md-5 yes-no col-sm-offset-1-5">
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">Positive <span class="check-mark">&#x2717;</span></button></a>
+  <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+        <h2>Incorrect. Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
+        </div>
+        <div class="modal-footer background-nav-blue">
+          <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="margin-left: 25px;" class="col-md-5 yes-no">
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Negative <span class="check-mark mark2">&#x2713;</span></button></a>
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+        <h2><span class="pink-hl">Correct</span> Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
+        </div>
+        <div class="modal-footer background-nav-blue">
+          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
 
 
          <div class="row continue-container background-nav-blue">
@@ -77,7 +114,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view9" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient2view9" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
